007. Validación de datos en tu aplicación web con Spring Boot/spring-rest-validation/src/main/java/com/example/error/ErrorResponse.java
package com.example.error;

public class ErrorResponse {

    private String message;

    public ErrorResponse() {
    }

    public String getMessage() {
        return message;
    }

    public void setMessage(String message) {
        this.message = message;
    }
}
